deprecated/webFrontend/website-deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: flask-server
spec:
  selector:
    matchLabels:
      app: flask-server
  replicas: 1
  template:
    metadata:
      labels:
        app: flask-server
    spec:
      containers:
      - name: flask-server
        image: audioid-website
        imagePullPolicy: Never
        resources:
          requests:
            cpu: 100m
            memory: 400Mi
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /srv/uploads
          name: mp3uploads
      volumes:
      - name: mp3uploads
        persistentVolumeClaim:
          claimName: 'mp3-pvc'
---
