deprecated/webFrontend/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
  labels:
    app: flask
spec:
  ports:
    - protocol: "TCP"
      port: 5000
      targetPort: 5000
  selector:
    app: flask-server
